test/corpus/fail/M0103.mo
=========
M0103.mo
=========

ignore (func (a) {})

---

(source_file
  (exp_dec
    (ignore_exp
      (par_exp
        (func_exp
          (tup_pat
            (var_pat
              (identifier)))
          (func_body
            (block_exp)))))))
